--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: executando docker
-        run: docker run docker/whalesay cowsay
+        run: docker run docker/whalesay cowsay realizando teste inicial de alteração de yml
         
       - name: Run a multi-line script
         run:
