--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,7 @@
 sonar.projectKey=Sena1616_GitHubActions
 sonar.organization=sena1616
-
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=GitHubActions
-#sonar.projectVersion=1.0
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
-
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sources=.
+sonar.languages=js,jsx,ts,tsx
+sonar.javascript.file.suffixes=js,.jsx
+sonar.typescript.file.suffixes=ts,.tsx
+sonar.sourceEnconding=UTF-8
